--- a/docs/.vitepress/theme/style/theme.css
+++ b/docs/.vitepress/theme/style/theme.css
@@ -39,6 +39,7 @@
   /* BLOSSOM 样式 */
   --bl-img-box-shadow: 0 0 5px 2px #d9d9d9;
   --bl-img-drop-shadow: 0 0 5px #9e9e9e;
+  --bl-scroll-color: #c6c6c6;
   --bl-preview-blockquote-color: #7d7d7d;
   --bl-preview-blockquote-bg-color: #f0f0f0;
   --bl-preview-blockquote-border-color: #bebebe;
@@ -74,6 +75,8 @@
   /* BLOSSOM 样式 */
   --bl-img-box-shadow: 0 0 5px 3px #000000;
   --bl-img-drop-shadow: 0 0 5px #000000;
+  --bl-scroll-color: #414141;
+
   --bl-preview-blockquote-color: #b9b9b9;
   --bl-preview-blockquote-bg-color: #3a3a3a;
   --bl-preview-blockquote-border-color: #6e6e6e;
@@ -92,22 +95,22 @@
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
+  height: 8px;
+  width: 8px;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
-::-webkit-scrollbar:hover {
-  width: 7px;
-  height: 7px;
-}
-
-/* 定义滑块 内阴影+圆角 */
 ::-webkit-scrollbar-thumb {
-  background-color: #77964964;
+  border-radius: 5px;
+  background: var(--bl-scroll-color);
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #7796499b;
+::-webkit-scrollbar-track {
+}
+
+::-webkit-scrollbar-button {
 }
 
 .vp-doc blockquote {
